# SPL---Assignment3

./: README
Client/: CMakeLists.txt  makefile
Client/include/: ClientProtocol.h  ConnectionHandler.h  EncoderDecoder.h  ServerPacket.h  client.h
Client/src/: ClientProtocol.cpp  ConnectionHandler.cpp  EncoderDecoder.cpp  ServerPacket.cpp  client.cpp
Server/: .project
Server/src/main/java/bgu/spl171/net/TFPT/: AckPacket.java  BCastPacket.java  DELRQPacket.java  DIRQPacket.java  DataPacket.java  DiscPacket.java  ErrorPacket.java  LOGRQPacket.java  MessageEncoderDecoderImpl.java  RRQPacket.java  ServerPacket.java  TFTPProtocolImpl.java  WRQPacket.java
Server/src/main/java/bgu/spl171/net/api/: BidiMessagingProtocol.java
Server/src/main/java/bgu/spl171/net/impl/TFTPreactor/: ReactorMain.java
Server/src/main/java/bgu/spl171/net/impl/TFTPtpc/: TPCMain.java
Server/src/main/java/bgu/spl171/net/impl/newsfeed/: NewsFeedServerMain.java
Server/src/main/java/bgu/spl171/net/srv/: BaseServer.java  BlockingConnectionHandler.java  ConnectionsImpl.java  NonBlockingConnectionHandler.java  Reactor.java  Server.java
Server/src/main/java/bgu/spl171/net/srv/bidi/: ConnectionHandler.java
